Nelson haha sound, images, basic view added

--- a/app.json
+++ b/app.json
@@ -1,4 +1,4 @@
 {
-  "name": "FancysoundsPack",
-  "displayName": "FancysoundsPack"
+  "name": "FancySoundsPack",
+  "displayName": "FancySoundsPack"
 }
