--- a/ios/FancysoundsPack.xcodeproj/xcshareddata/xcschemes/FancysoundsPack.xcscheme
+++ b/ios/FancysoundsPack.xcodeproj/xcshareddata/xcschemes/FancysoundsPack.xcscheme
@@ -29,9 +29,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-               BuildableName = "FancysoundsPack.app"
-               BlueprintName = "FancysoundsPack"
-               ReferencedContainer = "container:FancysoundsPack.xcodeproj">
+               BuildableName = "FancySoundsPack.app"
+               BlueprintName = "FancySoundsPack"
+               ReferencedContainer = "container:FancySoundsPack.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
          <BuildActionEntry
@@ -43,9 +43,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "FancysoundsPackTests.xctest"
-               BlueprintName = "FancysoundsPackTests"
-               ReferencedContainer = "container:FancysoundsPack.xcodeproj">
+               BuildableName = "FancySoundsPackTests.xctest"
+               BlueprintName = "FancySoundsPackTests"
+               ReferencedContainer = "container:FancySoundsPack.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -61,9 +61,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "FancysoundsPackTests.xctest"
-               BlueprintName = "FancysoundsPackTests"
-               ReferencedContainer = "container:FancysoundsPack.xcodeproj">
+               BuildableName = "FancySoundsPackTests.xctest"
+               BlueprintName = "FancySoundsPackTests"
+               ReferencedContainer = "container:FancySoundsPack.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -71,9 +71,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "FancysoundsPack.app"
-            BlueprintName = "FancysoundsPack"
-            ReferencedContainer = "container:FancysoundsPack.xcodeproj">
+            BuildableName = "FancySoundsPack.app"
+            BlueprintName = "FancySoundsPack"
+            ReferencedContainer = "container:FancySoundsPack.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
       <AdditionalOptions>
@@ -94,9 +94,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "FancysoundsPack.app"
-            BlueprintName = "FancysoundsPack"
-            ReferencedContainer = "container:FancysoundsPack.xcodeproj">
+            BuildableName = "FancySoundsPack.app"
+            BlueprintName = "FancySoundsPack"
+            ReferencedContainer = "container:FancySoundsPack.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
       <AdditionalOptions>
@@ -113,9 +113,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "FancysoundsPack.app"
-            BlueprintName = "FancysoundsPack"
-            ReferencedContainer = "container:FancysoundsPack.xcodeproj">
+            BuildableName = "FancySoundsPack.app"
+            BlueprintName = "FancySoundsPack"
+            ReferencedContainer = "container:FancySoundsPack.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
